# wsclean

./: .gitlab-ci.yml  CMakeLists.txt  CMakeVersionInfo.txt  Doxyfile.in  RELEASE.md  TESTING
tests/: CMakeLists.txt  conftest.py  tbaselinedependentaveraging.cpp  test_basics.py  test_command_catalogue.py  test_facets.py  test_stitch_facets.py  test_veladeconvolution.py  testbaselinedependentaveraging.cpp  testcachedimageset.cpp  testclean.cpp  testcommandline.cpp  testcomponentlist.cpp  testconfig.py.in  testimageset.cpp  testprimarybeamimageset.cpp  testserialization.cpp  testwsclean.cpp  tserialization.cpp  utils.py
tests/common/: smartptr.h
tests/deconvolution/: testdeconvolutiontable.cpp  testimageset.cpp
tests/facets/: tFacetDegridding.sh  tPredict.py  tPredict.sh
tests/gridding/: taveragecorrection.cpp  tvisibilitymodifier.cpp
tests/idg/: taveragebeam.cpp
tests/integration/: tbasics.cpp  testgenerichogbom.cpp  testmultiscale.cpp  tfacetstitch.cpp  tstitchfacets.cpp  tveladeconvolution.cpp
tests/io/: tcachedimageset.cpp  tparsetreader.cpp
tests/main/: tcommandline.cpp  tmshelper.cpp  tsettings.cpp
tests/math/: tdijkstrasplitter.cpp  tgaussianfitter.cpp  timageoperations.cpp  tpolynomialchannelfitter.cpp  trenderer.cpp  ttophatconvolution.cpp
tests/msproviders/: tbdamsrowprovider.cpp  tmsrowproviderbase.cpp  tnoisemsrowprovider.cpp  treorder_extraction.cpp  treorder_store.cpp  treorder_utils.cpp  treorder_writer.cpp
tests/python/: CMakeLists.txt  aterms_check.py  aterms_checks.py  basic_checks.py  config_vars.py.in  conftest.py  facet_checks.py  long_system_checks.py  reuse_reorder_checks.py  spectral_imaging_checks.py  test_inline_apply_weights_and_corrections.py  utils.py  vela_deconvolution_checks.py
tests/scheduling/: tgriddingtaskfactory.cpp
tests/structures/: tddpsf.cpp  testimage.cpp  testimagingtable.cpp  tfacetutil.cpp  toutputchannelinfo.cpp  tresources.cpp  (+2 more)
(+268 files in other folders)
